# ai-protocol-mock

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  README_CN.md  RELEASE.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.8.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml  sync-manifests.yml
scripts/: __init__.py  sync_manifests.py
src/ai_protocol_mock/: __init__.py  config.py  main.py
src/ai_protocol_mock/engine/: __init__.py  errors.py  generator.py  resolver.py  stream.py
src/ai_protocol_mock/mocks/: __init__.py  http_provider.py  mcp_server.py
src/ai_protocol_mock/registry/: __init__.py  contracts.py  manifests.py
src/ai_protocol_mock/sync/: __init__.py
tests/: test_generative.py  test_mock.py  test_registry_r1.py  test_stream_encoder.py
